--- a/programIds/GRNPT8MPw3LYY6RdjsgKeFji5kMiG1fSxnxDjDBu4s73.json
+++ b/programIds/GRNPT8MPw3LYY6RdjsgKeFji5kMiG1fSxnxDjDBu4s73.json
@@ -1,12 +1,11 @@
 {
-  "totalUsdBalance": "0 $USDC",
-  "totalSolBalance": "0 SOL",
+  "totalUsdBalance": "0.00 $USDC",
   "programId": "GRNPT8MPw3LYY6RdjsgKeFji5kMiG1fSxnxDjDBu4s73",
   "realms": [
     {
       "realmId": "5J2bRTkzoSXWKZMW4o5tyNsT7Zwn9dDkDt6rMz6Ze9u1",
       "name": "Renpō Dao",
-      "solBalance": 0,
+      "symbol": "Renpo",
       "usdBalance": 0
     }
   ]
